implement edit feature

--- a/assets/styles/base/_base.scss
+++ b/assets/styles/base/_base.scss
@@ -19,4 +19,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+ul {
+  list-style: none;
 }
