--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,5 +3,8 @@
 @import "./base/base";
 @import "./base/typography";
 
+@import "./components/modal";
 @import "./components/card";
 @import "./components/input";
+@import "./components/btn";
+@import "./components/list";
