--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -3,3 +3,18 @@ body {
   font-weight: 400;
   color: $color-grey-dark;
 }
+
+h1 {
+  font-size: 6.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: $color-primary;
+  text-shadow: 0 0 0.6rem $color-white;
+  margin-bottom: 4rem;
+}
+
+h2.count {
+  font-size: 3rem;
+  font-weight: 600;
+  color: $color-primary;
+}
