--- a/assets/styles/components/_btn.scss
+++ b/assets/styles/components/_btn.scss
@@ -1,15 +1,35 @@
+.btn-group {
+  display: flex;
+}
+
 .btn {
   border: none;
   border-radius: 0.3rem;
   color: $color-tertiary;
-  background-color: $color-primary;
   font-size: 2.5rem;
   color: $color-tertiary;
+  transition: 0.4s;
+  display: flex;
+
   i {
-    padding: 0.8rem 2.2rem;
     width: 100%;
     height: 100%;
     font-size: 1.6rem;
+  }
+
+  &:hover {
+    background-color: $color-secondary;
+    color: $color-primary;
+    border: 0.2rem solid $color-primary;
+  }
+}
+
+.btn-dark {
+  border: 0.2rem solid $color-primary;
+  background-color: $color-primary;
+  i {
+    padding: 0.8rem 2.2rem;
+
     cursor: pointer;
   }
 }
@@ -17,9 +37,20 @@
 .btn-icon {
   color: $color-primary;
   background-color: $color-tertiary;
-  margin-right: 0.8rem;
+  outline: none;
+
   i {
-    padding: 0;
     cursor: pointer;
+    font-size: 1.6rem;
   }
+
+  &:hover {
+    background-color: initial;
+    color: $color-primary;
+    border: none;
+  }
+}
+
+.btn-icon:first-child {
+  margin-right: 0.8rem;
 }
