--- a/assets/styles/components/_list.scss
+++ b/assets/styles/components/_list.scss
@@ -1,20 +1,43 @@
 .list {
-  //   background-color: $color-secondary;
-  margin: 3rem 0;
+  margin-top: 3rem;
   border: 0.1rem solid $color-grey-light;
   border-radius: 0.3rem;
   color: $color-primary;
   font-size: 1.7rem;
+  height: 30rem;
+  width: 100%;
   overflow-y: scroll;
+  flex-direction: column;
 
   li {
+    width: 100%;
     padding: 1rem 1.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    overflow-x: visible;
+    cursor: move;
+    overflow-x: hidden;
+
+    p {
+      word-break: break-all;
+      white-space: normal;
+      margin-right: 1.5rem;
+    }
   }
   li:not(:last-child) {
     border-bottom: 0.1rem solid $color-grey-light;
   }
+
+  i.emoji {
+    font-size: 10rem;
+    width: 100%;
+    height: 100%;
+    color: $color-primary;
+    text-shadow: 0 0 0.6rem $color-secondary;
+    @include center;
+  }
+}
+
+.list.completed {
+  height: 300px;
 }
