--- a/assets/styles/components/_modal.scss
+++ b/assets/styles/components/_modal.scss
@@ -3,19 +3,19 @@
   z-index: 1;
 
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include center;
   transition: all 0.5s;
   opacity: 0;
   height: 0;
+  top: -100%;
 
   .modal-bg {
-    background: rgba($color-black, 0.5);
+    background: rgba($color-primary, 0.5);
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: -1;
+    cursor: pointer;
   }
 
   form {
@@ -24,8 +24,8 @@
     border-radius: 0.4rem;
   }
 }
-
 .modal.active {
   opacity: 1;
   height: 100%;
+  top: auto;
 }
