--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,6 +1,6 @@
 @import "./abstracts/variables";
 
-@import "./base/base";
+@import "./base/common";
 @import "./base/typography";
 
 @import "./components/modal";
